--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ default_lang: en
 default_body_class: list
 
 author:
-    name: Yours Truly
+    name: Povilas
     # url:  http://example.com/
     company:
-        name: Famous Inc.
+        name: Socialheat
         # url:  http://example.com/
 
 fork_url: https://github.com/shower/shower
